Fix overflowing text in timeblocks

--- a/src/components/TimeBlocks/stylesheet.scss
+++ b/src/components/TimeBlocks/stylesheet.scss
@@ -23,7 +23,7 @@
       flex-direction: column;
       align-items: stretch;
       justify-content: center;
-      padding: 2px 8px;
+      padding: 0 8px;
 
       span {
         white-space: nowrap;
